# agent-cli-tools

./: .gitignore  AGENTS.md  CODE_GUIDELINES.md  Cargo.toml  README.md  TESTING.md  build.rs
.github/workflows/: test.yml
bitbucket_skill/: bitbucket_skill.md
bitbucket_skill/bitbucket_branch_skill/: bitbucket_branch_skill.md
bitbucket_skill/bitbucket_commit_skill/: bitbucket_commit_skill.md
bitbucket_skill/bitbucket_pipeline_skill/: bitbucket_pipeline_skill.md
bitbucket_skill/bitbucket_pr_skill/: bitbucket_pr_skill.md
bitbucket_skill/bitbucket_repo_skill/: bitbucket_repo_skill.md
bitbucket_skill/bitbucket_source_skill/: bitbucket_source_skill.md
confluence_skill/: confluence_skill.md
confluence_skill/confluence_page_attachment_skill/: confluence_page_attachment_skill.md
confluence_skill/confluence_page_comment_skill/: confluence_page_comment_skill.md
confluence_skill/confluence_page_skill/: confluence_page_skill.md
confluence_skill/confluence_space_skill/: confluence_space_skill.md
docs/: README.md  aai-cli-command-reference.md  auth-matrix.md  manifest.json  token-refresh.md
docs/apollo/: api-client.md
docs/atlassian/: adf.md
docs/github/: best-practices-for-integrators.html  openapi-description.html  (+8 more)
github_skill/: github_skill.md
gmail_skill/: gmail_skill.md
jira_skill/: jira_skill.md
local/: e2e.config.example.toml  e2e.env.example
scripts/: fetch-api-docs.sh  run-tests.sh
src/: cli.rs  config.rs  config_commands.rs  error.rs  http.rs  input.rs  main.rs  oauth.rs  pagination.rs  secrets.rs  skills.rs
tests/: e2e_live.rs
(+109 files in other folders)
