[package]
name = "aai-cli"
version = "0.1.0"
edition = "2021"
description = "Agent-friendly CLI wrappers for Atlassian, GitHub, Google, and Zoho APIs"
license = "MIT"

[[bin]]
name = "aai-cli"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
imap = { version = "2.4", default-features = false }
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls-connector = { version = "0.22", default-features = false, features = ["webpki-roots-certs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
urlencoding = "2.1"
zip = { version = "6", default-features = false, features = ["deflate"] }

[build-dependencies]
zip = { version = "6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23"
